styles.css
body {
    background: rgb(20, 20, 20);
    margin: 0px;
}

/* menu */

.menu {
    position: fixed;
    width: 100%;
    z-index: 1;
    display: block;
    height: 50px;
    background: rgba(0, 0, 0, 0.4);
    backdrop-filter: blur(35px);
    -webkit-backdrop-filter: blur(35px);
}

.links {
    margin-left: 16%;
    width: 68%;
    height: 50px;
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.link {
    height: 18px;
    display: block;
}

.more {
    display: grid;
    grid-auto-flow: column;
    grid-column-gap: 30px;
}

.stroke {
    margin-top: 50px;
    height: 1px;
    width: 100%;
    background: rgba(255, 255, 255, 0.2);
    display: block;
}

/* header */

.header {
    width: 100%;
    height: 100vh;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

.title {
    width: 45%;
    position: absolute;
    z-index: -1;
    display: block;
}

.scroll {
    width: 50px;
    align-self: flex-end;
    padding-bottom: 30px;
    position: absolute;
    z-index: -1;
    display: block;
}

.fadeIn {
    width: 100%;
    height: 100vh;
    background-color: #ffffff;
    animation: fadeInAnimation ease 7s;
    animation-iteration-count: 1; 
    animation-fill-mode: forwards; 
} 
@keyframes fadeInAnimation { 
    0% { 
        opacity: 1; 
    } 
    100% { 
        opacity: 0; 
     } 
}

video {
    width: 100%;
    height: 100vh;
    object-fit: cover;
    position: absolute;
    z-index: -2;
    display: block;
}

/* products */

.projectImages {
    overflow: scroll;
    width: 100%;
    display: flex;
    -ms-overflow-style: none;
    scrollbar-width: none;
    justify-content: flex-start;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
}

.projectImages::-webkit-scrollbar {
    display: none;
}

.projectImage {
    display: block;
    height: 100%;
    width: 68%;
    scroll-snap-align: center;
    filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.5));
    -webkit-filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.5));
    margin-top: 100px;
    margin-bottom: 50px;
    border-radius: 10px;
}

.projectImage:first-child {
    margin-left: 16%;
}

.projectImage:not(:first-child) {
    margin-left: 3%;
}

.projectBuffer {
    padding-right: 16%;
}

.projectDescription {
    display: flex;
    position: relative;
    justify-content: flex-start;
    margin-left: 20%;
    width: 60%;
}

.projectText {
    width: 100%;
    display: block;
    z-index: -1;
}

.projectDownload {
    margin-left: -17%;
    width: 17%;
    height: 100%;
    display: block;
    z-index: 1;
}

.projectDownloadIcon {
    width: 100%;
    height: 100%;
    display: block;
    z-index: 1;
}

/* whois */

.whoisContainer {
    margin-top: 100px;
    padding-top: 100px;
    padding-bottom: 100px;
    background-color: rgb(30, 30, 30);
    width: 100%;
    position: relative;
}

.whoContainer {
    background: rgb(35, 35, 35);
    border-radius: 10px;
    width: 68%;
    margin-left: 16%;
}

.who {
    display: block;
    width: 94%;
    margin-left: 6%;
    border-radius: 10px;
}

.skills {
    margin-top: 50px;
    display: block;
    width: 68%;
    margin-left: 16%;
}

